[package]
name = "jsonlogic"
version = "0.2.0"
authors = ["Marvin Davieds <marvin.davieds@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A JsonLogic implementation in Rust"
repository = "https://github.com/marvindv/jsonlogic_rs"
keywords = ["jsonlogic", "json", "logic", "rule"]
categories = ["parser-implementations", "encoding"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
